[gd_scene load_steps=5 format=3 uid="uid://dvypavlab4dp0"]

[ext_resource type="Script" uid="uid://cikty0jqvh5go" path="res://main/menu/login.gd" id="1_awes1"]
[ext_resource type="Script" uid="uid://dth4q2dvb4juw" path="res://mats/game_objs/masp/masp.gd" id="2_qwve0"]
[ext_resource type="AudioStream" uid="uid://8iagypshf5vg" path="res://mats/sounds/wait.ogg" id="3_f4i2i"]
[ext_resource type="PackedScene" uid="uid://cgn6b7gjy87pi" path="res://main/menu/settings.tscn" id="4_f4i2i"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_awes1")

[node name="err" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 512.0
offset_top = 424.0
offset_right = 768.0
offset_bottom = 424.0
fit_content = true

[node name="pc" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.5
offset_top = -54.5
offset_right = 65.5
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2

[node name="mc" type="MarginContainer" parent="pc"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="vbc" type="VBoxContainer" parent="pc/mc"]
layout_mode = 2

[node name="user" type="LineEdit" parent="pc/mc/vbc"]
layout_mode = 2
placeholder_text = "твой логин"

[node name="pass" type="LineEdit" parent="pc/mc/vbc"]
layout_mode = 2
placeholder_text = "твой пароль"
secret = true

[node name="hbc" type="HBoxContainer" parent="pc/mc/vbc"]
layout_mode = 2

[node name="exit" type="Button" parent="pc/mc/vbc/hbc"]
layout_mode = 2
size_flags_horizontal = 3
text = "выйти"

[node name="log" type="Button" parent="pc/mc/vbc/hbc"]
layout_mode = 2
size_flags_horizontal = 3
text = "войти"

[node name="jpb" type="Button" parent="pc/mc/vbc/hbc"]
layout_mode = 2

[node name="AudioPlayer" type="Node2D" parent="."]
script = ExtResource("2_qwve0")
time = 22.2
asm = ExtResource("3_f4i2i")
busName = "Music"
auto_play = true
metadata/_custom_type_script = "uid://dth4q2dvb4juw"

[node name="to_settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "настройки"

[node name="settings" parent="." instance=ExtResource("4_f4i2i")]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -260.0
offset_top = -130.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0

[connection signal="button_down" from="pc/mc/vbc/hbc/exit" to="." method="_on_exit_button_down"]
[connection signal="button_down" from="pc/mc/vbc/hbc/log" to="." method="_on_log_button_down"]
[connection signal="button_down" from="pc/mc/vbc/hbc/jpb" to="." method="_on_just_play_button_down"]
[connection signal="button_down" from="to_settings" to="." method="_on_to_settings_button_down"]
[connection signal="apply_pressed" from="settings" to="." method="_on_settings_button_pressed"]
[connection signal="cancel_pressed" from="settings" to="." method="_on_settings_button_pressed"]
